Projeto funcional Coloquei javascript

--- a/index.html
+++ b/index.html
@@ -13,22 +13,10 @@
     </header>
     <main>
         <div id="div-add">
-            <input id="add-task"><button>Add</button>
+            <input id="add-task"><button onclick="addItem()">Add</button>
         </div>
         <div>
         <ul>
-            <li class="task">
-                <div><i class='bx bx-checkbox'></i></div>
-                <p>TarefaAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAa</p>
-                <button><i class='bx bxs-trash'></i></button>
-            </li>
-
-            <li class="task-checked">
-                <i class='bx bx-checkbox-checked'></i>
-                <p>Tarefa</p>
-                <button><i class='bx bxs-trash'></i></button>
-            </li>
-
         </ul>
         </div>
     </main>
